--- a/app/views/divisions/_form.html.erb
+++ b/app/views/divisions/_form.html.erb
@@ -23,6 +23,10 @@
     <%= form.text_field :manager, class:"form-control", placeholder:"Manager" %>
   </div>
 
+  <div class="field form-group mb-3">
+    <%= form.text_field :employee_id, class:"form-control", placeholder:"Employee(Manager) Id" %>
+  </div>
+
   <div class="actions">
     <%= form.submit class:"btn btn-secondary"%>
   </div>
