--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -27,6 +27,10 @@
     <%= form.text_field :team_lead, class:"form-control", placeholder:"Team Lead" %>
   </div>
 
+  <div class="field form-group mb-3">
+    <%= form.text_field :division_id, class:"form-control", placeholder:"Division Id" %>
+  </div>
+
   <div class="actions">
     <%= form.submit class:"btn btn-secondary" %>
   </div>
