--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -35,6 +35,12 @@
     <%= form.text_field :employment_status, class:"form-control", placeholder:"Status" %>
   </div>
 
+  <div class="field form-group mb-3">
+    <%= form.text_field :team_id, class:"form-control", placeholder:"Team Id" %>
+  </div>
+
+
+
   <div class="actions">
     <%= form.submit class:"btn btn-secondary" %>
   </div>
