--- a/app/views/targets/_form.html.erb
+++ b/app/views/targets/_form.html.erb
@@ -31,12 +31,13 @@
     <%= form.text_field :attribute_name, class:"form-control", placeholder:"Attribute" %>
   </div>
 
-  <div class="field form-group mb-3">
-    <%= form.text_field :team, class:"form-control", placeholder:"Team" %>
-  </div>
 
   <div class="field form-group mb-3">
     <%= form.text_field :status, class:"form-control", placeholder:"Status" %>
+  </div>
+
+  <div class="field form-group mb-3">
+    <%= form.text_field :team_id, class:"form-control", placeholder:"Team Id" %>
   </div>
 
   <div class="actions">
