--- a/app/views/divisions/_division.html.erb
+++ b/app/views/divisions/_division.html.erb
@@ -14,4 +14,9 @@
     <%= division.manager %>
   </p>
 
+  <p>
+    <strong>Employee Id:</strong>
+    <%= division.employee_id %>
+  </p>
+
 </div>
