--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -7,6 +7,7 @@
     <th>Name</th>
     <th>Description</th>
     <th>Manager</th>
+    <th>Employee Id</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -17,6 +18,7 @@
     <td><%= division.name %></td>
     <td><%= division.description %></td>
     <td><%= division.manager %></td>
+    <td><%= division.employee_id %></td>
     <td><%= link_to 'Show', division %></td>
     <td><%= link_to 'Edit', edit_division_path(division) %></td>
     <td><%= link_to 'Destroy', division, method: :delete, data: { confirm: 'Are you sure?'} %></td>
