--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -4,12 +4,13 @@
 
   <thead class="table-dark">
   <tr>
-    <th>Employee</th>
+    <th>ID</th>
     <th>Name</th>
     <th>Email</th>
     <th>Job</th>
     <th>Slary</th>
     <th>Employment Status</th>
+    <th>Team Id</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -23,6 +24,7 @@
     <td><%= employee.job %></td>
     <td><%= employee.salary %></td>
     <td><%= employee.employment_status %></td>
+    <td><%= employee.team_id %></td>
     <td><%= link_to 'Show', employee %></td>
     <td><%= link_to 'Edit',  edit_employee_path(employee) %></td>
     <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?'} %></td>
