--- a/app/views/targets/index.html.erb
+++ b/app/views/targets/index.html.erb
@@ -10,6 +10,7 @@
     <th>Finish Date</th>
     <th>Attribute</th>
     <th>Status</th>
+    <th>Team Id</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -23,6 +24,7 @@
     <td><%= target.finish_date %></td>
     <td><%= target.attribute_name %></td>
     <td><%= target.status %></td>
+    <td><%= target.team_id %></td>
     <td><%= link_to 'Show', target %></td>
     <td><%= link_to 'Edit',  edit_target_path(target) %></td>
     <td><%= link_to 'Destroy', target, method: :delete, data: { confirm: 'Are you sure?'} %></td>
