--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -4,10 +4,11 @@
 
   <thead class="table-dark">
   <tr>
-    <th>Team Id</th>
+    <th>ID</th>
     <th>Name</th>
     <th>Description</th>
-    <th>Team lEAD</th>
+    <th>Team Lead</th>
+    <th>Division Id</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -19,6 +20,7 @@
     <td><%= team.name %></td>
     <td><%= team.description %></td>
     <td><%= team.team_lead %></td>
+    <td><%= team.division_id %></td>
     <td><%= link_to 'Show', team %></td>
     <td><%= link_to 'Edit', edit_team_path(team) %></td>
     <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?'} %></td>
