--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @division %>
 
 <div>
-  <%= link_to "Edit this division", edit_division_path(@division) %> |
-  <%= link_to "Back to divisions", divisions_path %>
+  <%= link_to "Edit this division", edit_division_path(@division), class:"btn btn-secondary" %> 
+  <%= link_to "Back to divisions", divisions_path, class:"btn btn-dark" %>
+  <br>
+  <br>
 
-  <%= button_to "Destroy this division", @division, method: :delete %>
+  <%= button_to "Destroy this division", @division, method: :delete, class:"btn btn-secondary" %>
 </div>
