--- a/app/views/targets/show.html.erb
+++ b/app/views/targets/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @target %>
 
 <div>
-  <%= link_to "Edit this target", edit_target_path(@target) %> |
-  <%= link_to "Back to targets", targets_path %>
+  <%= link_to "Edit this target", edit_target_path(@target), class:"btn btn-secondary" %> 
+  <%= link_to "Back to targets", targets_path, class:"btn btn-dark" %>
+  <br>
+  <br>
 
-  <%= button_to "Destroy this target", @target, method: :delete %>
+  <%= button_to "Destroy this target", @target, method: :delete, class:"btn btn-secondary" %>
 </div>
