--- a/app/views/divisions/_form.html.erb
+++ b/app/views/divisions/_form.html.erb
@@ -23,8 +23,9 @@
     <%= form.text_field :manager, class:"form-control", placeholder:"Manager" %>
   </div>
 
-  <div class="field form-group mb-3">
-    <%= form.text_field :employee_id, class:"form-control", placeholder:"Employee(Manager) Id" %>
+ 
+  <div class="field form-group mb-3" class="form-control">
+    <%= form.select :employee_id,Employee.all.pluck(:name,:id),{prompt:'Manager'},{class: "form-control"}%>
   </div>
 
   <div class="actions">
