--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -27,8 +27,12 @@
     <%= form.text_field :team_lead, class:"form-control", placeholder:"Team Lead" %>
   </div>
 
-  <div class="field form-group mb-3">
-    <%= form.text_field :division_id, class:"form-control", placeholder:"Division Id" %>
+   <div class="field form-group mb-3" class="form-control">
+    <%= form.select :employee_id,Employee.all.pluck(:name,:id),{prompt:'Team Lead'},{class: "form-control"}%>
+  </div>
+
+  <div class="field form-group mb-3" class="form-control">
+    <%= form.select :division_id,Division.all.pluck(:name,:id),{prompt:'Division'},{class: "form-control"}%>
   </div>
 
   <div class="actions">
