--- a/app/views/targets/_form.html.erb
+++ b/app/views/targets/_form.html.erb
@@ -36,8 +36,8 @@
     <%= form.text_field :status, class:"form-control", placeholder:"Status" %>
   </div>
 
-  <div class="field form-group mb-3">
-    <%= form.text_field :team_id, class:"form-control", placeholder:"Team Id" %>
+  <div class="field form-group mb-3" class="form-control">
+    <%= form.select :team_id,Team.all.pluck(:name,:id),{prompt:'Team'},{class: "form-control"}%>
   </div>
 
   <div class="actions">
