--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,7 +7,7 @@
     <th>ID</th>
     <th>Name</th>
     <th>Description</th>
-    <th>Team Lead</th>
+    <th>Leader Id</th>
     <th>Division Id</th>
     <th colspan="3"></th>
   </tr>
